syntax = "proto3";

message ELData {
	string sensorId = 1;
	float sensorValue = 2;
}
